# zod_gen

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  ai-agent-prompt.md  let-it-crash-lesson.md  rust-toolchain.toml  test_precommit.rs  test_precommit_bad.rs
.github/: SETUP.md
.github/scripts/: check_binary_sizes.rs  coverage_annotations.rs  extract_changelog.rs  pr_validation.rs
.github/workflows/: ci.yml  dependencies.yml  docs.yml  pr.yml  release.yml
examples/: Cargo.toml  basic_usage.rs  derive_example.rs  discriminated_unions.rs  generator_example.rs  serde_rename_test.rs
examples/src/: lib.rs
scripts/: clippy-ci.sh  debug-clippy.sh  setup-hooks.sh
zod_gen/: Cargo.toml  README.md
zod_gen/src/: lib.rs
zod_gen_derive/: Cargo.toml  README.md
zod_gen_derive/src/: lib.rs
zod_gen_derive/tests/: derive_tests.rs  enum_representations.rs  ui.rs
zod_gen_derive/tests/ui/: content_without_tag.rs  content_without_tag.stderr  internal_tag_string_newtype.rs  internal_tag_string_newtype.stderr  internal_tag_tuple.rs  internal_tag_tuple.stderr  tag_with_untagged.rs  tag_with_untagged.stderr
