[workspace]
resolver = "2"
members = [
  "zod_gen",
  "zod_gen_derive",
  "examples",
]

[workspace.package]
version = "1.1.13"
edition = "2021"
license = "MIT"
repository = "https://github.com/cimatic/zod_gen"
homepage = "https://github.com/cimatic/zod_gen"
documentation = "https://docs.rs/zod_gen"
authors = ["Kamil <kamil@cimatic.io>"]
keywords = ["zod", "typescript", "schema", "validation", "codegen"]
categories = ["development-tools", "web-programming"]

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
