[package]
name = "zod_gen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Generate Zod schemas and TypeScript types from Rust types"

[dependencies]
serde.workspace = true
serde_json.workspace = true