[package]
name = "zod_gen_derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Derive macro for zod_gen - automatically generate Zod schemas from Rust types with serde rename support"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
zod_gen = { version = "1.1.6", path = "../zod_gen" }